Button layout redesign and big refactor of PlaybackClicksListener; Replace webp icon with svg one; Better separation of responsibilities for recyclerview's adapter;

--- a/app/src/main/res/layout/app_layout_button.xml
+++ b/app/src/main/res/layout/app_layout_button.xml
@@ -1,5 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ToggleButton xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/app_MyCustomTheme.ButtonListItem"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    app:contentPaddingBottom="@dimen/app_default_view_spacing_2x"
+    app:contentPaddingLeft="@dimen/app_default_view_spacing_1x"
+    app:contentPaddingRight="@dimen/app_default_view_spacing_1x"
+    app:contentPaddingTop="@dimen/app_default_view_spacing_1x">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/app_button_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/app_default_view_spacing_1x"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/app_name" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/app_action_play_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/app_ic_play_arrow_black_24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/app_button_name" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/app_action_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/app_ic_share_black_24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/app_action_play_pause" />
+
+        <!--        <androidx.appcompat.widget.AppCompatImageView-->
+        <!--            android:id="@+id/app_action_edit"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:paddingStart="8dp"-->
+        <!--            android:paddingEnd="8dp"-->
+        <!--            android:src="@drawable/app_ic_edit_black_24dp"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="@id/app_action_play_pause" />-->
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
