Minor resources renaming to achieve a better organization

--- a/app/src/main/res/drawable/app_toolbar_background.xml
+++ b/app/src/main/res/drawable/app_toolbar_background.xml
@@ -6,7 +6,7 @@
         android:right="-100dp"
         android:top="-80dp">
         <shape android:shape="oval">
-            <solid android:color="@color/app_colorPrimary" />
+            <solid android:color="@color/app_primary_color" />
         </shape>
     </item>
 </layer-list>
