--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,8 +10,9 @@
     <dimen name="app_default_icon_size">24dp</dimen>
 
     <dimen name="app_font_size_small_dynamic_feature">14sp</dimen>
-    <dimen name="app_font_size_default">16sp</dimen>
+    <dimen name="app_font_size_medium_default">16sp</dimen>
 
+    <!-- Navigation defitions -->
     <dimen name="app_material_appbar_bottom_height">84dp</dimen>
     <dimen name="app_appbar_top_height">92dp</dimen>
     <dimen name="app_appbar_top_title_margin_top">14dp</dimen>
@@ -19,4 +20,5 @@
     <!-- These 2 are required to emulate the superposition between the rounded app bar and the scrollable content -->
     <dimen name="app_appbar_scrollable_content_overlap_margin">36dp</dimen>
     <dimen name="app_appbar_scrollable_content_overlap_traslation_negative">-24dp</dimen>
+    <!-- /Navigation defitions -->
 </resources>
