--- a/app/src/main/res/drawable/app_ic_delete_white_36dp.xml
+++ b/app/src/main/res/drawable/app_ic_delete_white_36dp.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="36dp"
     android:height="36dp"
-    android:tint="#FFFFFF"
+    android:tint="@color/app_white"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
