Fix naming conflicts generating a false positive on Android Lint

--- a/feature_addbutton/src/main/res/layout/feature_addbutton_activity_add_button.xml
+++ b/feature_addbutton/src/main/res/layout/feature_addbutton_activity_add_button.xml
@@ -29,7 +29,7 @@
         tools:ignore="UnusedAttribute" />
 
     <Button
-        android:id="@+id/saveButton"
+        android:id="@+id/feature_addbutton_saveButton"
         style="@style/feature_addbutton_MyCustomTheme.Form.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
